fix highest and lowest location